--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
          </div> 
         <div class="buttons">
             <button id="erase" class="erase_button">erase</button>
-            <button id="claer">AC</button>
+            <button id="clear">AC</button>
             <button id="divide"  class="oporator_button">/</button>
             <div id="numbers_btns" class="numbers_buttons number_grid"></div>
             <button id="multiply" class="oporator_button">X</button>
